Replace occurences of opengazettes.org.za with opengazettes.or.ke

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
       <div id="navbar-collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a href="https://search.opengazettes.org.za/">Search</a>
+            <a href="https://search.opengazettes.or.ke/">Search</a>
           </li>
           <li id="join">
             <a href="/join">Liberate Gazettes</a>
