--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,4 +1,4 @@
-<form method="GET" action="https://search.opengazettes.org.za/search" class="search-form">
+<form method="GET" action="https://search.opengazettes.or.ke/search" class="search-form">
   {% if site.data.gazettes[page.jurisdiction].search_collection %}
   <input type="hidden" name="filter:collection_id" value="{{ site.data.gazettes[page.jurisdiction].search_collection }}">
   {% endif %}
