Ensure always goes to https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,12 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="Recently added gazettes" href="http://archive.opengazettes.or.ke/recently-added.atom">
 
+  <script type="text/javascript">
+    var host = "{{ site.enforce_ssl }}";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+      window.location.protocol = "https";
+  </script>
+  
   {% seo %}
+  
 </head>
