--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,62 +3,46 @@
   <section class="footer-info">
     <div class="container">
 
-        <h2>{{ site.title }}</h2>
-        <p>{{ site.description }}</p>
-        <p class="footer-govprinters">
-          Gazettes from the <a href="http://www.gpwonline.co.za/">Government Printing Works</a> are re-shared under <a href="/img/gpw-authorization.pdf">Government Printers Authorization No. 11733 dated 23 March 2016</a>.
-        </p>
+      <h2>{{ site.title }}</h2>
+      <p>{{ site.description }}</p>
+      <p class="footer-govprinters">
+        Gazettes from the <a href="http://kenyalaw.org/kl/" target="_blank" rel="noopener">National Council for Law Reporting (Kenya Law)</a> are re-shared under <a href="https://web.archive.org/web/20170215233726/http://www.kenyalaw.org/kl/index.php?id=2161f" target="_blank" rel="noopener">Creative Commons Attribution - ShareAlike 4.0 International (CC BY-SA 4.0) license</a>.
+      </p>
 
-        <div class="row">
-          <div class="col-sm-6">
-            <ul class="list-unstyled">
-              <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-              <li><a href="/about.html">About Open Gazettes</a></li>
-              <li><a href="http://archive.opengazettes.org.za/recently-added.atom" type="application/rss+xml" rel="alternate">Atom Feed</a></li>
-            </ul>
-          </div>
-
-          <div class="col-sm-6">
-            <ul class="list-unstyled">
-              <li><a href="https://github.com/Code4SA/opengazettes">Open Gazettes on GitHub</a></li>
-              <li><a href="https://twitter.com/hashtag/GazetteLiberation" target="_blank">Follow the conversation on Twitter <img width="24px" src="{{ "/img/icons/twitter-hover.png" | prepend: site.baseurl }}" alt="Follow the conversation around OpenGazettes on Twitter" /></a></li>
-            </ul>
-          </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <ul class="list-unstyled">
+            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            <li><a href="/about.html">About Open Gazettes</a></li>
+            <li><a href="{{ site.s3_url }}/recently-added.atom" type="application/rss+xml" rel="alternate">Atom Feed</a></li>
+          </ul>
         </div>
 
-    </div>
-    </section>
-
-    <section class="footer-credits">
-      <div class="container">
-        <div class="footer_campaign">
-          <p>Who is a part of the <a href="#">#GazetteLiberation</a> campaign?</p>
-        </div>
-        <div class="row logos">
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="http://code4sa.org" target="_blank"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="http://www.codebridge.org.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="http://www.saflii.org/" target="_blank"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="https://codeforafrica.org/" target="_blank"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="https://investigativecenters.org/" target="_blank"><img src="{{ "/img/ancir-logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
-          </div>
-          <!--<div class="col-xs-12">
-            <a class="twitter-timeline"  href="https://twitter.com/hashtag/GazetteLiberation" data-widget-id="771327133071310848">#GazetteLiberation Tweets</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </div>-->
+        <div class="col-sm-6">
+          <ul class="list-unstyled">
+            <li><a href="https://github.com/OpenGazettes/">Open Gazettes on GitHub</a></li>
+            <li><a href="https://twitter.com/hashtag/GazetteLiberation" target="_blank">Follow the conversation on Twitter <img width="24px" src="{{ "/img/icons/twitter-hover.png" | prepend: site.baseurl }}" alt="Follow the conversation around OpenGazettes on Twitter" /></a></li>
+          </ul>
         </div>
       </div>
-    </section>
+
+    </div>
+  </section> <!-- /.footer-info -->
+
+  <section class="footer-credits">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Who is a part of the <a href="https://twitter.com/hashtag/GazetteLiberation">#GazetteLiberation</a> campaign?</p>
+        </div>
+        <div class="col-sm-8">
+          <a href="https://codeforkenya.org" target="_blank"><img src="{{ "/img/logos/cfkenya.png" | prepend: site.baseurl }}" class="logo" alt="Code for Kenya"></a>
+          <a href="https://openup.org.za" target="_blank" rel="noopener"><img src="{{ "/img/logos/openup.svg" | prepend: site.baseurl }}" class="logo" alt="OpenUpZA"></a>
+          <a href="https://codeforafrica.org/" target="_blank"><img src="{{ "/img/logos/cfafrica.png" | prepend: site.baseurl }}" class="logo" alt="Code for Africa"></a>
+          <a href="https://investigativecenters.org/" target="_blank"><img src="{{ "/img/logos/ancir.png" | prepend: site.baseurl }}" class="logo" alt="ANCIR"></a>
+        </div>
+      </div>
+    </div> <!-- /.container -->
+  </section> <!-- /.footer-credits -->
 
 </footer>
