--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="{{ page.body_class }}">
 
     {% include header.html %}
 
@@ -17,13 +17,13 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-48399585-45', 'auto');
+      ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
     </script>
 
-    <script src="/js/jquery-1.11.3.min.js"></script>
-    <script src="/js/bootstrap-3.3.7.min.js"></script>
-    <script src="/js/d3.v4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
     <script src="/js/main.js"></script>
 
   </body>
