Couple of updates.

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -3,9 +3,9 @@
   <input type="hidden" name="filter:collection_id" value="{{ site.data.gazettes[page.jurisdiction].search_collection }}">
   {% endif %}
   <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search the gazettes" autocomplete="off" name="q">
+    <input type="text" class="form-control" placeholder="Search the gazettes..." autocomplete="off" name="q">
     <span class="input-group-btn">
-      <button class="btn btn-primary" type="submit">Search</button>
+      <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i> Search</button>
     </span>
   </div>
 </form>
