--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -206,6 +206,7 @@ h2, .h2 {
 
     h2 {
       color: #fff !important;
+      margin-bottom: 20px;
     }
     .search-form {
       margin-bottom: 40px;
@@ -218,6 +219,7 @@ h2, .h2 {
       border-radius: 6px 0 0 6px !important;
     }
     .btn {
+      @extend .btn-danger;
       border-radius: 0 6px 6px 0 !important;
     }
   }
