Failed Gazettes template  * Refactor build_index.py to generate both successful and failed gazettes  * Add template to show the failed gazettes

--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -25,19 +25,26 @@ layout: default
   </div>
 
   <div class="post-content">
-    {% for gazette in site.data.gazettes[page.jurisdiction].gazettes[page.year] %}
-      {% assign currentdate = gazette.publication_date | date: "%B %Y" %}
-      {% if currentdate != date %}
-        {% unless forloop.first %}</ul>{% endunless %}
-        <h2 id="{{ gazette.publication_date | date: "%m" }}">{{ currentdate }}</h2>
-        <ul>
-        {% assign date = currentdate %}
-      {% endif %}
-      <li>
-        <a target="_blank" href="http://docs.google.com/gview?url={{ gazette.archive_url }}">{{ gazette.gazette_title }}</a>
-      </li>
-      {% if forloop.last %}</ul>{% endif %}
-    {% endfor %}
+    <div class="row">
+      <div class="col-md-8">
+        {% for gazette in site.data.gazettes[page.jurisdiction].gazettes[page.year] %}
+          {% assign currentdate = gazette.publication_date | date: "%B %Y" %}
+          {% if currentdate != date %}
+            {% unless forloop.first %}</ul>{% endunless %}
+            <h2 id="{{ gazette.publication_date | date: "%m" }}">{{ currentdate }}</h2>
+            <ul>
+            {% assign date = currentdate %}
+          {% endif %}
+          <li>
+            <a target="_blank" href="http://docs.google.com/gview?url={{ gazette.archive_url }}">{{ gazette.gazette_title }}</a>
+          </li>
+          {% if forloop.last %}</ul>{% endif %}
+        {% endfor %}
+      </div> 
+        <div class="col-md-4">
+          {% include failed_gazettes.html %}          
+      </div>     
+     </div>
   </div>
 
   <footer>
