--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -48,6 +48,7 @@ layout: default
 
       <div class="col-md-4">
           {% include resources.html %}
+          {% include failed_gazettes.html %}       
       </div>
 
     </div>
