--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -411,6 +411,13 @@ form.search-form {
   padding: 20px;
 }
 
+#failed_gaz {
+  background-color: white;
+  padding: 20px;
+  height: 800px;
+  overflow-y: scroll;
+}
+
 
 .jurisdiction-stats, .year-stats {
   svg {
