--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -18,7 +18,7 @@ body {
   }
 
   .navbar.navbar-default {
-    background-color: #333;
+    background-color: #3a4953;
     border-bottom:0;
     color: #fff;
     box-shadow: 0 0 2px rgba(0,0,0,0.5);
@@ -49,7 +49,7 @@ body {
 
         &.active {
           &> a {
-            background-color: #333;
+            background-color: #3a4953;
             color: #c50003;
             font-weight: 700;
           }
