Add Kenya Law logo to footer
 * Also fixed some PEP8 issues in build-index.py

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,10 +32,11 @@
   <section class="footer-credits">
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-2">
           <p>Who is a part of the <a href="https://twitter.com/hashtag/GazetteLiberation">#GazetteLiberation</a> campaign?</p>
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-10">
+          <a href="http://kenyalaw.org" target="_blank"><img src="{{ "/img/logos/kenyalaw.png" | prepend: site.baseurl }}" class="logo" alt="Kenya Law"></a>
           <a href="https://codeforkenya.org" target="_blank"><img src="{{ "/img/logos/cfkenya.png" | prepend: site.baseurl }}" class="logo" alt="Code for Kenya"></a>
           <a href="https://openup.org.za" target="_blank" rel="noopener"><img src="{{ "/img/logos/openup.svg" | prepend: site.baseurl }}" class="logo" alt="OpenUpZA"></a>
           <a href="https://codeforafrica.org/" target="_blank"><img src="{{ "/img/logos/cfafrica.png" | prepend: site.baseurl }}" class="logo" alt="Code for Africa"></a>
