[Chore] Fix color of search examples

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,8 @@ $navbar-border-radius: 0px;
         "site"
 ;
 
-.sample-searches a{
-        color: #e69896;
+.home {
+        .sample-searches a {
+                color: #f9adab;
+        }
 }
