[Chore] Move gazette source attribution to vconfig variables

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <h2>{{ site.title }}</h2>
       <p>{{ site.description }}</p>
       <p class="footer-govprinters">
-        Gazettes from the <a href="https://dds.crl.edu/crldelivery/27040" target="_blank" rel="noopener">Center for Research Libraries: Global Resource Network</a>.
+        Gazettes from the <a href="{{ site.source_attribution_link }}" target="_blank" rel="noopener">{{ site.source_attribution }}</a>.
       </p>
 
       <div class="row">
